RESOLVED FIXED 273027
[IFC][Invalidation] Let's rebuild inline item list only once per partial layout
https://bugs.webkit.org/show_bug.cgi?id=273027
Summary [IFC][Invalidation] Let's rebuild inline item list only once per partial layout
zalan
Reported 2024-04-20 05:47:44 PDT
ssia
Attachments
Patch (17.79 KB, patch)
2024-04-20 05:59 PDT, zalan
no flags
[fast-cq]Patch (17.79 KB, patch)
2024-04-22 07:48 PDT, zalan
ews-feeder: commit-queue-
zalan
Comment 1 2024-04-20 05:59:11 PDT
zalan
Comment 2 2024-04-22 07:48:46 PDT
Created attachment 471040 [details] [fast-cq]Patch
EWS
Comment 3 2024-04-22 09:50:37 PDT
Committed 277820@main (65d8fc47b724): <https://commits.webkit.org/277820@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 471040 [details].
Radar WebKit Bug Importer
Comment 4 2024-04-22 09:51:19 PDT
Note You need to log in before you can comment on or make changes to this bug.