Source/WebCore/layout/formattingContexts/inline/invalidation/InlineDamage.h
@@ -48,9 +48,7 @@ public:
         Remove                 = 1 << 2,
         ContentChange          = 1 << 3,
         StyleChange            = 1 << 4,
-        BreakingContextChanged = 1 << 5,
-        InlineItemTypeChanged  = 1 << 6,
-        Pagination             = 1 << 7
+        Pagination             = 1 << 5
     };
     OptionSet<Reason> reasons() const { return m_damageReasons; }
 
@@ -67,6 +65,9 @@ public:
 
     void addDetachedBox(UniqueRef<Box>&& layoutBox) { m_detachedLayoutBoxes.append(WTFMove(layoutBox)); }
 
+    bool isInlineItemListDirty() const { return m_isInlineItemListDirty; }
+    void setInlineItemListClean() { m_isInlineItemListDirty = false; }
+
 #ifndef NDEBUG
     bool hasDetachedContent() const { return !m_detachedLayoutBoxes.isEmpty(); }
 #endif
@@ -78,8 +79,10 @@ private:
     void setLayoutStartPosition(LayoutPosition position) { m_layoutStartPosition = position; }
     void resetLayoutPosition();
     void setTrailingDisplayBoxes(TrailingDisplayBoxList&& trailingDisplayBoxes) { m_trailingDisplayBoxes = WTFMove(trailingDisplayBoxes); }
+    void setInlineItemListDirty() { m_isInlineItemListDirty = true; }
 
     OptionSet<Reason> m_damageReasons;
+    bool m_isInlineItemListDirty { false };
     std::optional<LayoutPosition> m_layoutStartPosition;
     TrailingDisplayBoxList m_trailingDisplayBoxes;
     Vector<UniqueRef<Box>> m_detachedLayoutBoxes;
